added about me and technologies

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-<!-- HEADER -->
+<!-- SECTION 1: HEADER -->
 <div class="bg-mobile bg-cover md:bg-desktop h-screen bg-cover bg-center">
-    <img src="" class=""> <!--Logo-->
-<div class="hidden md:flex justify-end w-64 p-7 font-semibold">
+    <img src="" class="" alt=""> <!-- Logo -->
+<div class="hidden md:flex justify-end p-7 font-bold">
     <a href="#Home" class="pr-14">HOME</a>
     <a href="#About-me" class="pr-14">ABOUT ME</a>
     <a href="#Technologies" class="pr-14">TECHNOLOGIES</a>
@@ -28,7 +28,31 @@
 </div>
 </div>
 
+<!-- SECTION 2: ABOUT ME -->
+<div id="About-me" class="flex justify-center items-center">
+    <div class="w-1/4 p-7">
+    <img src="./images/about-me.png" alt="">
+    </div>
 
+    <div class="flex flex-col justify-center items-center w-1/2 p-7">
+        <h1 class="text-7xl font-bold text-orange-600 pb-14">ABOUT ME</h1>
+        <p class="text-2xl font-bold">Hi, I'm Mthokozisi Masondo, a passionate programmer dedicated to solving real-life problems with code. After attending the Codespace Bootcamp, I discovered my love for programming and honed my skills in web development.</p>
+        <p class="text-2xl font-bold pt-4">As a lifelong learner, I thrive on new challenges and continuously seek opportunities to expand my skills. I invite you to explore my work and connect with me!</p>
+    </div>
+</div>
+
+<!-- SECTION 3: TECHNOLOGIES -->
+<hr class="border-t border-black my-8">
+ <div id="Technologies" class="flex flex-col items-center justify-center">
+    <h1 class="text-7xl font-bold text-orange-600 pt-7" alt="Technologies">TECHNOLOGIES</h1>
+    <div class="flex gap-48 pt-14">
+        <img src="./icons/html-5.png" alt="Html">
+        <img src="./icons/css-3.png" alt="Css">
+        <img src="./icons/tailwind-css.png" alt="Tailwind">
+        <img src="./icons/js.png" alt="Javascript">
+        <img src="./icons/react.png" alt="Javascript">
+    </div>
+ </div>
 
 
 
