--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="flex flex-col justify-center items-center w-1/2 p-7">
-        <h1 class="text-7xl font-bold text-orange-600 pb-14">ABOUT ME</h1>
+        <h1 class="text-7xl font-bold text-orange-600 pb-14 underline decoration-2 decoration-orange-600 underline-offset-8">ABOUT ME</h1>
         <p class="text-2xl font-bold">Hi, I'm Mthokozisi Masondo, a passionate programmer dedicated to solving real-life problems with code. After attending the Codespace Bootcamp, I discovered my love for programming and honed my skills in web development.</p>
         <p class="text-2xl font-bold pt-4">As a lifelong learner, I thrive on new challenges and continuously seek opportunities to expand my skills. I invite you to explore my work and connect with me!</p>
     </div>
@@ -43,26 +43,75 @@
 
 <!-- SECTION 3: TECHNOLOGIES -->
 <hr class="border-t border-black my-8">
- <div id="Technologies" class="flex flex-col items-center justify-center">
-    <h1 class="text-7xl font-bold text-orange-600 pt-7" alt="Technologies">TECHNOLOGIES</h1>
+ <div id="Technologies" class="flex flex-col items-center justify-center pb-7">
+    <h1 class="text-7xl font-bold text-orange-600 pt-7 underline decoration-2 decoration-orange-600 underline-offset-8" alt="Technologies">TECHNOLOGIES</h1>
     <div class="flex gap-48 pt-14">
+        <!-- HTML -->
         <img src="./icons/html-5.png" alt="Html">
+        <!-- CSS -->
         <img src="./icons/css-3.png" alt="Css">
+        <!-- Tailwind -->
         <img src="./icons/tailwind-css.png" alt="Tailwind">
+        <!-- Javascript -->
         <img src="./icons/js.png" alt="Javascript">
-        <img src="./icons/react.png" alt="Javascript">
+        <!-- React -->
+        <img src="./icons/react.png" alt="React">
     </div>
  </div>
 
+ <!-- SECTION 4: PROJECTS -->
+ <hr class="border-t border-black my-8">
+ <div id="Projects" class="flex flex-col items-center justify-center">
+<h1 class="text-7xl font-bold text-orange-600 py-7 underline decoration-2 decoration-orange-600 underline-offset-8">PROJECTS</h1>
+<div class="pt-7 grid grid-cols-2 gap-4 p-14">
 
+    <!-- Cache Bank Landing Page -->
+    <div>
+     <h2 class="text-4xl font-semibold">Cache Bank Landing Page</h2>
+     <p class="text-2xl pb-6">- HTML, TAILWIND CSS</p>
+     <img src="./images/Cache-Bank.png" href="" alt="">
+    </div>
 
+    <!-- Agile Board -->
+    <div>
+    <h2 class="text-4xl font-semibold">Agile Board</h2>
+    <p class="text-2xl pb-6">- HTML, CSS, JAVASCRIPT</p>
+     <img src="./images/Agile-Board.png" href="" alt="">
+    </div>
 
+    <!-- Blackjack Game -->
+    <div>
+    <h2 class="text-4xl font-semibold">Blackjack Game</h2>
+    <p class="text-2xl pb-6">- HTML, CSS, JAVASCRIPT</p>
+     <img src="./images/Blackjack-Game.png" href="" alt="">
+    </div>
 
+    <!-- Dashboard Chrome Extension -->
+    <div>
+    <h2 class="text-4xl font-semibold">Dashboard Chrome Extension</h2>
+    <p class="text-2xl pb-6">- HTML, CSS, JAVASCRIPT</p>
+     <img src="./images/Dashboard-Chrome-Extension.png" href="" alt="">
+    </div>
 
+</div>
 
+ </div>
 
+<!-- SECTION 5: FOOTER -->
+ <footer id="Contact" class="bg-orange-600 h-28 flex flex-col items-center justify-center">
+    <h3 class="font-semibold text-3xl text-white">Contact Me</h3>
+    <div class="flex gap-28 pt-7">
+        <!-- Linked In -->
+        <img src="./icons/linkedin (2).png" href="" alt="linkedin">
 
+        <!-- Gmail -->
+        <img src="./icons/gmail-logo.png" href="" alt="gmail">
+        
+        <!-- Github -->
+        <img src="./icons/github.png" href="" alt="github">
+    </div>
 
-    
+ </footer>
+
 </body>
 </html>
